[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

paste ={ version = "1.0" }
cached="0.46"
itertools="0.12"
rayon="1"
num="0.4"
indicatif="0.17"

[dev-dependencies]
rstest = "0.18"
